--- a/Minigolf/styles.css
+++ b/Minigolf/styles.css
@@ -1,16 +1,35 @@
-html, body {
-  padding: 0px;
-  margin: 0px;
-  width: 100%;
-  height: 100%;
- overflow: hidden;
+html,
+body {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-dialog { 
-  text-align: center; 
+dialog {
+    text-align: center;
 }
 
-canvas.fullscreen { 
-  width: 100vw; 
-  height: 100vh; 
+canvas.fullscreen {
+    width: 100vw;
+    height: 100vh;
+}
+
+#timer {
+    position: absolute;
+    bottom: 90%;
+    background-color: cadetblue;
+    padding: 3px;
+    margin-left: 5%;
+    margin-right: 95%;
+}
+
+#hits {
+    position: absolute;
+    bottom: 90%;
+    background-color: cadetblue;
+    padding: 3px;
+    margin-left: 10%;
+    margin-right: 90%;
 }
